dark mode price fix

--- a/src/assets/sass/content.scss
+++ b/src/assets/sass/content.scss
@@ -355,6 +355,10 @@
       .cs-divider {
         background-color: var(--bodyTextColorWhite);
       }
+
+      .cs-price {
+        color: var(--bodyTextColorWhite);
+      }
     }
   }
 }
